@@ -56,7 +56,7 @@ public class ZeroOne_path implements ZeroOnePack {
         if (w >= weight[i - 1] && dp[i][w] == dp[i - 1][w - weight[i - 1]] + value[i - 1]) {
             path.add(i - 1); // 添加物品编号
             backtrack(i - 1, w - weight[i - 1], weight, value, dp, path, result);
-            path.removeLast(); // 回溯
+            path.remove(path.size() - 1); // 回溯
         }
         // 再尝试“不选当前物品”
         if (dp[i][w] == dp[i - 1][w]) {
